--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,71 @@
     body {
       margin: 0;
       padding: 0;
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+      font-size: 14px;
+      line-height: 1.5;
     }
 
-    .canvas {
-      width: 100vw;
+    .wrapper {
+      display: grid;
+      grid-template-rows: 90px 40px 2fr;
       height: 100vh;
-      background: red;
     }
+
+    .header {
+      display: grid;
+      grid-template-columns: 3fr 1fr 1fr;
+      border-bottom: 1px solid #eee;
+    }
+
+    .item {
+      padding: 20px;
+    }
+
+    .player-info {
+      display: grid;
+      background: #f7f7f7;
+    }
+
+    .content {
+      display: grid;
+    }
+
+    #options {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .slider-value {
+      margin-left: 5px;
+      font-family: monospace;
+    }
+
+    .option {
+      display: block;
+    }
+
     </style>
   </head>
   <body>
-    <div class="js-canvas canvas"></div>
+    <div class="wrapper">
+      <div class="header">
+        <div class="item">
+          <form action="" id="options"></form>
+        </div>
+        <div class="item">
+          Steps
+          <span class="js-steps">0</span>
+        </div>
+        <div class="item">
+          <button class="pause js-pause">Pause</button>
+        </div>
+      </div>
+      <div class="player-info js-player-info"></div>
+      <div class="content js-content">
+
+      </div>
+    </div>
     <script src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
