how more meta info about players on mouseover

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,11 @@
       text-align: center;
     }
 
+    .POR {
+      stroke: black;
+      fill: yellow !important;
+    }
+
     </style>
   </head>
   <body>
