--- a/public/index.html
+++ b/public/index.html
@@ -1,103 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Basketball statistics</title>
-    <style media="screen">
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-      font-size: 14px;
-      line-height: 1.5;
-    }
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    .wrapper {
-      display: grid;
-      grid-template-rows: 90px 110px 2fr;
-      height: 100vh;
-    }
-
-    .header {
-      display: grid;
-      grid-template-columns: 3fr 1fr 1fr;
-      border-bottom: 1px solid #eee;
-    }
-
-    .item {
-      padding: 20px;
-    }
-
-    .player-info {
-      display: grid;
-      grid-template-columns: repeat(15, 1fr);
-      background: #f7f7f7;
-    }
-
-    .content {
-      display: grid;
-    }
-
-    #options {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    .slider-value {
-      margin-left: 5px;
-      font-family: monospace;
-    }
-
-    .option {
-      display: block;
-    }
-
-    .detail {
-      font-size: 10px;
-      border: 1px solid #eee;
-      padding: 10px;
-    }
-
-    .k, .v {
-      display: block;
-    }
-
-    .k {
-      text-align: center;
-      color: #999;
-    }
-
-    .v {
-      font-weight: bold;
-      text-align: center;
-    }
-
-    .POR {
-      stroke: black;
-      fill: yellow !important;
-    }
-
-    </style>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="header">
-        <div class="item">
-          <form action="" id="options"></form>
-        </div>
-        <div class="item">
-          Steps
-          <span class="js-steps">0</span>
-        </div>
-        <div class="item">
-          <button class="pause js-pause">Pause</button>
-        </div>
-      </div>
-      <div class="player-info js-player-info"></div>
-      <div class="content js-content">
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-      </div>
-    </div>
-    <script src="bundle.js" charset="utf-8"></script>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
